--- a/Namanpro.html
+++ b/Namanpro.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+#you can keep other colours too
 <h1 style="background-color:powderblue;">This is a heading</h1>
 <p style="background-color:tomato;">This is a paragraph.</p>
+  <p style="background-color:tomato;">This is a paragraph.</p>
+  <p style="background-color:red;">This is a paragraph.</p>
+  <p style="background-color:yellow;">This is a paragraph.</p>
+  <p style="background-color:green;">This is a paragraph.</p>
 
 </body>
 </html>
